# phantom

./: README.md  index.html
apps/editor/src/: main.rs
book/src/: SUMMARY.md  appendix-further-reading.md  rendering.md  tracking-input.md
crates/phantom_app/src/: app.rs  camera.rs  resources.rs  state.rs
crates/phantom_dependencies/: Cargo.toml
crates/phantom_dependencies/src/: lib.rs
crates/phantom_gui/src/: gui.rs
crates/phantom_render/: Cargo.toml
crates/phantom_render/src/: renderer.rs  wgpu.rs
crates/phantom_render/src/wgpu/: texture.rs  uniform.rs  world.rs
crates/phantom_world/: Cargo.toml
crates/phantom_world/src/: animation.rs  gltf.rs  scenegraph.rs  texture.rs  world.rs
