[package]
name = "phantom_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
gilrs = "0.9.0"
image = "0.24.2"
log = "0.4.17"
nalgebra-glm = "0.17.0"
thiserror = "1.0.31"
raw-window-handle = "0.4.2"
wgpu = "0.12.0"
winit = "0.26.1"
bytemuck = "1.9.1"
pollster = "0.2.5"
